--- a/app/views/admins/end_users/show.html.erb
+++ b/app/views/admins/end_users/show.html.erb
@@ -44,7 +44,7 @@
 				</tr>
 				<tr>
 					<td><%= link_to "編集する",edit_admins_end_user_path(@end_user.id) %></td>
-					<td><%= link_to "注文履歴一覧を見る" %></td>
+					<td><%= link_to "注文履歴一覧を見る", admins_orders_path %></td>
 				</tr>
 			</tbody>
 		</table>
