--- a/app/views/admins/homes/top.html.erb
+++ b/app/views/admins/homes/top.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
 	<div class="row" style="text-align:center; margin-top:100px;">
 		<h1 class= "atoptext">管理者画面</h1>
-		<h2 class= "atoptext">本日の注文件数<%= @order_count.count %>件</h2>
+		<h2 class= "atoptext">本日の注文件数<%= link_to @order_count.count, admins_orders_path %>件</h2>
 	</div>
 </div>
 </body>
