--- a/app/views/end_users/orders/new.html.erb
+++ b/app/views/end_users/orders/new.html.erb
@@ -36,11 +36,11 @@
 
 			<div class="new-shipping">
 				<label>郵便番号</label>
-				<%= f.text_field :zip_code, :style => "margin:10px;" %>ハイフンなし<br>
+				<%= f.text_field :zip_code,placeholder: "7桁で入力してください", :style => "margin:10px;" %>ハイフンなし<br>
 				<label>住所</label>
-				<%= f.text_field :address, :style => "margin:10px;" %><br>
+				<%= f.text_field :address,placeholder: "住所を入力して下さい", :style => "margin:10px;" %><br>
 				<label>宛名</label>
-				<%= f.text_field :order_name, :style => "margin:10px;" %>
+				<%= f.text_field :order_name,placeholder: "宛名を入力して下さい", :style => "margin:10px;" %>
 			</div>
 			<%= f.submit '購入確認に進む', :style => "margin:20px;", class: "order" %>
 			<% end %>
