--- a/app/views/end_users/orders/show.html.erb
+++ b/app/views/end_users/orders/show.html.erb
@@ -61,7 +61,7 @@
 				</tbody>
 			</table>
 			<!-- 注文内容 -->
-			<table>
+			<table class= "table">
 				<h3 class= "toptext">注文内容</h3>
 				<thead>
 					<tr>
