--- a/app/views/admins/end_users/index.html.erb
+++ b/app/views/admins/end_users/index.html.erb
@@ -1,32 +1,34 @@
 <div class="container">
 	<div class="row">
 
-		<body>
-			<h1>会員一覧画面</h1>
-			<table>
+		<body class= "abody">
+			<h1 class="atoptext">会員一覧画面</h1>
+			<table class= "table">
 				<thead>
-					<tr>
+					<tr class="atoptext">
 						<th>会員ID</th>
 						<th>氏名</th>
 						<th>メールアドレス</th>
 						<th>ステータス</th>
 					</tr>
 				</thead>
-				<tbody>
+				<tbody class="atoptext">
 					<% @end_users.each do |end_user| %>
 					<tr>
 						<td><%= end_user.id %></td>
 						<td><%= link_to end_user.full_name ,admins_end_user_path(end_user.id)  %></td>
 						<td><%= end_user.email  %></td>
 						<!-- if文を使ってdeleted_atがあった場合の表示したい内容　無い時の表示したい内容を書く -->
-							<% if end_user.deleted_at.present? %>
-								<td>退会済</td>
-							<% else %>
-								<td>有効</td>
-							<% end %>
-						</tr>
+						<% if end_user.deleted_at.present? %>
+						<td>退会済</td>
+						<% else %>
+						<td>有効</td>
 						<% end %>
-					</tbody>
-				</table>
-			</body>
-		</div>
+					</tr>
+					<% end %>
+				</tbody>
+			</table>
+		</body>
+	</div>
+</div>
+
