--- a/app/views/end_users/registrations/new.html.erb
+++ b/app/views/end_users/registrations/new.html.erb
@@ -14,13 +14,13 @@
               <td>
                 <div class="field">
                   <%= f.label "姓(漢字)"%>
-                  <%= f.text_field :first_name %>
+                  <%= f.text_field :first_name,placeholder: "長野",autofocus: true %>
                 </div>
               </td>
               <td>
                 <div class="field">
                   <%= f.label "名(漢字)" %>
-                  <%= f.text_field :last_name ,autofocus: true %>
+                  <%= f.text_field :last_name,placeholder: "太郎" ,autofocus: true %>
                 </div>
               </td>
             </tr>
@@ -29,13 +29,13 @@
               <td>
                 <div class="field">
                   <%= f.label "姓(フリガナ)" %>
-                  <%= f.text_field :first_name_kana, autofocus: true %>
+                  <%= f.text_field :first_name_kana,placeholder: "ナガノ", autofocus: true %>
                 </div>
               </td>
               <td>
                 <div class="field">
                   <%= f.label "名(フリガナ)" %>
-                  <%= f.text_field :last_name_kana, autofocus: true %>
+                  <%= f.text_field :last_name_kana,placeholder: "タロウ", autofocus: true %>
                 </div>
               </td>
             </tr>
@@ -43,7 +43,7 @@
               <td>郵便番号</td>
               <td>
                 <div class="field">
-                  <%= f.text_field :zip_code, autofocus: true %>
+                  <%= f.text_field :zip_code,placeholder: "7桁で入力して下さい", autofocus: true %>
                 </div>
               </td>
             </tr>
@@ -52,7 +52,7 @@
               <td>住所</td>
               <td>
                 <div class="field">
-                  <%= f.text_field :address, autofocus: true  %>
+                  <%= f.text_field :address,placeholder: "住所を入力して下さい", autofocus: true  %>
                 </div>
               </td>
             </tr>
@@ -60,7 +60,7 @@
               <td>電話番号</td>
               <td>
                 <div class="field">
-                  <%= f.text_field :phone_number, autofocus: true %>
+                  <%= f.text_field :phone_number,placeholder: "080XXXXXXXX" , autofocus: true %>
                   </div
                   ></td>
                 </tr>
@@ -68,7 +68,7 @@
                   <td>メールアドレス</td>
                   <td>
                     <div class="field">
-                      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+                      <%= f.email_field :email,placeholder: "@gmail", autofocus: true, autocomplete: "email" %>
                     </div>
                   </td>
                 </tr>
@@ -80,7 +80,7 @@
                       <em>(<%= @minimum_password_length %> characters minimum)</em>
                       <% end %>
                       <br />
-                      <%= f.password_field :password, autocomplete: "new-password" %>
+                      <%= f.password_field :password,placeholder: "パスワード6桁以上", autocomplete: "new-password" %>
                     </div>
                   </td>
                 </tr>
@@ -89,7 +89,7 @@
                   <td>パスワード確認</td>
                   <td>
                     <div class="field">
-                      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+                      <%= f.password_field :password_confirmation,placeholder: "パスワード6桁以上", autocomplete: "new-password" %>
                     </div>
                   </td>
                 </tr>
