--- a/app/views/admins/end_users/show.html.erb
+++ b/app/views/admins/end_users/show.html.erb
@@ -49,7 +49,7 @@
 				</td>
 			</tr>
 			<tr>
-				<td><%= link_to "注文履歴一覧を見る",admins_orders_path,class: "admin", :style => "margin:10px; text-decoration:none; color:white;" %>
+				<td><%= link_to "注文履歴一覧を見る",admins_path(@end_user.id),class: "admin", :style => "margin:10px; text-decoration:none; color:white;" %>
 				</td>
 			</tr>
 		</div>
