--- a/app/views/end_users/registrations/edit.html.erb
+++ b/app/views/end_users/registrations/edit.html.erb
@@ -1,13 +1,14 @@
-        <div class="container">
-          <div class="row">
-            <h2>Edit <%= resource_name.to_s.humanize %></h2>
+        <body class= "mypage">
+        <div class= "container">
+          <div class= "row">
+            <h2 class= "toptext">Edit <%= resource_name.to_s.humanize %></h2>
 
             <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
             <%= render "devise/shared/error_messages", resource: resource %>
 
             <div class="field">
-              <%= f.label :email %><br />
-              <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+              <%= f.label :メールアドレス %><br />
+              <%= f.email_field :email, autofocus: true, autocomplete: "email", :style => "margin:20px;" %>
             </div>
 
             <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -15,8 +16,8 @@
             <% end %>
 
             <div class="field">
-              <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-              <%= f.password_field :password, autocomplete: "new-password" %>
+              <%= f.label :パスワード %> <i>(leave blank if you don't want to change it)</i><br />
+              <%= f.password_field :password, autocomplete: "new-password", :style => "margin:20px;" %>
               <% if @minimum_password_length %>
               <br />
               <em><%= @minimum_password_length %> characters minimum</em>
@@ -24,24 +25,25 @@
             </div>
 
             <div class="field">
-              <%= f.label :password_confirmation %><br />
-              <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+              <%= f.label :パスワード確認 %><br />
+              <%= f.password_field :password_confirmation, autocomplete: "new-password", :style => "margin:20px;" %>
             </div>
 
             <div class="field">
-              <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-              <%= f.password_field :current_password, autocomplete: "current-password" %>
+              <%= f.label :新しいパスワード %> <i>(we need your current password to confirm your changes)</i><br />
+              <%= f.password_field :current_password, autocomplete: "current-password", :style => "margin:20px;" %>
             </div>
 
             <div class="actions">
-              <%= f.submit "Update" %>
+              <%= f.submit "Update", class: "mypageb", :style => "margin:20px;" %>
             </div>
             <% end %>
 
-            <h3>Cancel my account</h3>
+            <h3 class= "toptext">退会しますか？</h3>
 
-            <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+            <%= button_to "退会", registration_path(resource_name), data: { confirm: "本当に退会しますか?" }, method: :delete, class: "mypageb2", :style => "margin:20px;" %>
 
-            <%= link_to "Back", :back %>
+            <%= link_to "My,Page", :back, class: "mypageb", :style => "margin:20px; text-decoration:none; color:white;" %>
           </div>
         </div>
+      </body>
