--- a/app/views/end_users/homes/top.html.erb
+++ b/app/views/end_users/homes/top.html.erb
@@ -1,7 +1,10 @@
-<body class=topbody>
+<body class="">
 	<div class="container">
 		<div class="row">
-			<table class="genres_sarch col-xs-3">
+			<div class="bg"></div>
+			<div class="bg bg2"></div>
+			<div class="bg bg3"></div>
+					<table class="genres_sarch col-xs-3">
 				<thead>
 					<tr>
 						<th class= "toptext">ジャンル検索</th>
