--- a/app/views/end_users/orders/thanks.html.erb
+++ b/app/views/end_users/orders/thanks.html.erb
@@ -1,5 +1,8 @@
 <body class= "ordersbody">
+	<div class="bg"></div>
+			<div class="bg bg2"></div>
+			<div class="bg bg3"></div>
 	<div class="thanks-message" style="text-align:center; margin:300px;">
-		<h2>ご購入ありがとうございました<i class="fas fa-child fa-fw faa-bounce animated"></i></h2>
+		<h2 class= "toptext">ご購入ありがとうございました<i class="fas fa-child fa-fw faa-bounce animated"></i></h2>
 	</div>
 </body>
