--- a/app/views/end_users/shipping_addresses/edit.html.erb
+++ b/app/views/end_users/shipping_addresses/edit.html.erb
@@ -1,6 +1,9 @@
 <body class= "shippingbody">
 	<div class="container">
 	<div class="row">
+		<div class="bg"></div>
+			<div class="bg bg2"></div>
+			<div class="bg bg3"></div>
 	<h2 class= "toptext">配送先編集</h2>
 	<%= form_for(@shipping_address,url:end_users_shipping_address_path, method: :put) do |f| %>
 	<table class= "table table-bordered">
