--- a/app/views/end_users/shipping_addresses/index.html.erb
+++ b/app/views/end_users/shipping_addresses/index.html.erb
@@ -1,6 +1,9 @@
 <body class= "shippingbody">
 	<div class="container">
 		<div class="row">
+			<div class="bg"></div>
+			<div class="bg bg2"></div>
+			<div class="bg bg3"></div>
 			<h2 class= "shippingtext">配送先登録/一覧</h2>
 			<%= form_for(@shipping_address,url:end_users_shipping_addresses_path, method: :post)  do |f| %>
 			<table class="table table-bordered">
