--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,7 +25,7 @@
  .my-orange {color: #FFF3E0}
 
  .header {
- 	font-color: #FAFAFA;
+ 	font-color: #FFCC80;
  	text-align: center;
  	vertical-align: middle;
  	font-size: 300%;
