--- a/app/views/end_users/cart_items/index.html.erb
+++ b/app/views/end_users/cart_items/index.html.erb
@@ -1,7 +1,10 @@
 <body class= "cartbody">
 <div class="container">
 	<div class="row">
-		<h2>ショッピングカート</h2>
+		<div class="bg"></div>
+			<div class="bg bg2"></div>
+			<div class="bg bg3"></div>
+		<h2 class= "toptext">ショッピングカート</h2>
 		<div class= "table">
 			<div class= "empty-cart">
 				<%= link_to "カートを空にする",end_users_cart_items_empty_cart_path, "style" => "text-decoration: none; color: white; margin:20px;",class: "deletebutton" %>
