--- a/app/views/end_users/end_users/edit.html.erb
+++ b/app/views/end_users/end_users/edit.html.erb
@@ -1,6 +1,9 @@
 <body class= "mypage">
 	<div class="container">
 		<div class="row">
+			<div class="bg"></div>
+			<div class="bg bg2"></div>
+			<div class="bg bg3"></div>
 
 			<h2 class= "toptext">登録情報編集</h2>
 			<%= link_to "退会する", end_users_end_users_unsubscribe_path, class: "mypageb2", :style => "margin:20px; text-decoration:none; color:white;" %>
