--- a/app/views/end_users/end_users/show.html.erb
+++ b/app/views/end_users/end_users/show.html.erb
@@ -1,6 +1,9 @@
 <body class= "mypage">
 	<div class="container">
 		<div class="row">
+			<div class="bg"></div>
+			<div class="bg bg2"></div>
+			<div class="bg bg3"></div>
 			<h2 class= "toptext">マイページ</h2>
 
 			<h2 class= "toptext">登録情報</h2>
