--- a/app/views/end_users/end_users/unsubscribe.html.erb
+++ b/app/views/end_users/end_users/unsubscribe.html.erb
@@ -1,6 +1,9 @@
 <body class="mypage">
 	<div class="container">
 		<div class="row">
+			<div class="bg"></div>
+			<div class="bg bg2"></div>
+			<div class="bg bg3"></div>
 			<h2 class= "toptext">本当に退会しますか？</h2>
 			<h3 class= "toptext">退会すると、会員情報や<br>
 				これまでの購入履歴が閲覧できなくなります。<br>
