--- a/app/views/end_users/homes/about.html.erb
+++ b/app/views/end_users/homes/about.html.erb
@@ -1,6 +1,12 @@
 <body class="topbody">
 <div class="container">
 	<div class="row">
+		<div class="bg"></div>
+			<div class="bg bg2"></div>
+			<div class="bg bg3"></div>
+		<div class="bg"></div>
+			<div class="bg bg2"></div>
+			<div class="bg bg3"></div>
 		<h1 class= "toptext">NAGANO-CAKE</h1>
 		<p class= "toptext">世界一のお菓子を売るケーキショップへようこそ</p>
 	</div>
