--- a/app/views/end_users/items/index.html.erb
+++ b/app/views/end_users/items/index.html.erb
@@ -1,6 +1,9 @@
 <body class= "userbody">
 	<div class="container">
 		<div class="row">
+			<div class="bg"></div>
+			<div class="bg bg2"></div>
+			<div class="bg bg3"></div>
 			<table class="genres_sarch col-xs-3">
 				<thead>
 					<tr>
