--- a/app/views/end_users/orders/index.html.erb
+++ b/app/views/end_users/orders/index.html.erb
@@ -1,6 +1,9 @@
 <body class="ordersbody">
 <div class="container">
 	<div class="row">
+		<div class="bg"></div>
+			<div class="bg bg2"></div>
+			<div class="bg bg3"></div>
 	<h2 class= "toptext">注文履歴一覧</h2>
 	<table class="table">
 		<thead>
