--- a/app/views/end_users/registrations/edit.html.erb
+++ b/app/views/end_users/registrations/edit.html.erb
@@ -1,6 +1,9 @@
         <body class= "mypage">
         <div class= "container">
           <div class= "row">
+            <div class="bg"></div>
+      <div class="bg bg2"></div>
+      <div class="bg bg3"></div>
             <h2 class= "toptext">Edit <%= resource_name.to_s.humanize %></h2>
 
             <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
