--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -86,6 +86,9 @@
     </div>
 
     <% else %>
+    <div class="bg"></div>
+    <div class="bg bg2"></div>
+    <div class="bg bg3"></div>
     <h1 class= "header">
       <%= link_to  end_users_items_path,"style" => "text-decoration: none; color: white;" do%>
       NAGANO-CAKE
